[gd_scene load_steps=5 format=3 uid="uid://2p57n01jo2ga"]

[ext_resource type="Script" path="res://scripts/mini_map.gd" id="1_vwpqq"]
[ext_resource type="Texture2D" uid="uid://dggje6u4upcm" path="res://assets/messenger.png" id="2_idv42"]
[ext_resource type="Texture2D" uid="uid://dlcvwyn0b3lpi" path="res://assets/Exclamation.png" id="3_fpk4w"]

[sub_resource type="ViewportTexture" id="ViewportTexture_4875h"]
viewport_path = NodePath("SubViewport")

[node name="Minimap" type="CanvasLayer"]
script = ExtResource("1_vwpqq")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(1200, 660)

[node name="Camera2D" type="Camera2D" parent="SubViewport"]

[node name="PlayerMarker" type="ColorRect" parent="SubViewport"]
z_index = 20
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0.447059, 1, 1)

[node name="Messenger" type="Sprite2D" parent="SubViewport"]
z_index = 19
position = Vector2(303, 172)
scale = Vector2(2, 2)
texture = ExtResource("2_idv42")

[node name="MainExclamation" type="Sprite2D" parent="SubViewport"]
z_index = 20
position = Vector2(329, 181)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_fpk4w")

[node name="ForestExclamation" type="Sprite2D" parent="SubViewport"]
visible = false
z_index = 20
position = Vector2(329, 181)
texture = ExtResource("3_fpk4w")

[node name="MountainExclamation" type="Sprite2D" parent="SubViewport"]
z_index = 20
position = Vector2(329, 181)
texture = ExtResource("3_fpk4w")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -121.0
offset_top = -85.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_4875h")
expand_mode = 1

[node name="Line2D" type="Line2D" parent="UI"]
position = Vector2(-249.017, -157.276)
scale = Vector2(0.944303, 1.00813)
points = PackedVector2Array(389, 159, 271, 159, 271, 238, 389, 238)
closed = true
width = 2.0
default_color = Color(0.67451, 0.815686, 1, 1)
